--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name='viewport' content='width-device-width, initial-scale=1'>
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
         <title>My Money App</title>
         <link rel='stylesheet' href='app.css'>
     </head>
-    <body>
-        <div id="app" class="container">Teste</div>
+    <body class="skin-blue fixed sidebar-mini">
+        <div id="app"></div>
         <script src="app.js"></script>
     </body>
 </html>
